Fixing issue with timeline on mobile browsers

--- a/app/src/app/styles/_timeline.scss
+++ b/app/src/app/styles/_timeline.scss
@@ -41,8 +41,17 @@ timeline-event timeline-panel {
 }
 ul.timeline {
   margin-top: 120px;
+  max-width: 95%;
   li.timeline-event {
     min-height: 240px;
     margin-top: -100px;
+  }
+}
+@media screen and (max-width: 480px) {
+  ul.timeline {
+    margin-top: 20px;
+    li.timeline-event {
+      margin-top: 10px;
+    }
   }
 }
